[media] Refactorings for VdaVideoDecoder and PictureBufferManager.

These refactorings were removed from https://crrev.com/c/1362005 to
reduce the size of the patch.

This change also fixes a previously unknown issue in
PictureBufferManager whereby show_existing_frame picture buffers could
be destroyed while there are still outstanding video frames using the
textures.

Bug: 906623
Change-Id: I0a243684c9a6d44dec5a5f279cf28f51b79c99c0
Reviewed-on: https://chromium-review.googlesource.com/c/1368780
Commit-Queue: Dan Sanders <sandersd@chromium.org>
Reviewed-by: Hirokazu Honda <hiroh@chromium.org>
Cr-Commit-Position: refs/heads/master@{#615730}
Former-commit-id: ca7f9b7713f5b5274b8d74a24d7526421e4c2350